# 2D23D

./: .gitignore  LICENSE  README.md  generate_floor.py  generate_from_structural.py  pyproject.toml  requirements.txt
config/: layer_mapping_aia.json
config/templates/: malaysia_pwd_2024.json  singapore_bca_2024.json
d23d/: __init__.py
d23d/classification/: __init__.py  wall_classifier.py
d23d/core/: __init__.py  config.py  models.py
d23d/detection/: __init__.py  column_height_detector.py  column_height_from_reference.py  foundation_detector.py  grid_detector.py  wall_detector.py  wall_intersections.py
d23d/generation/: __init__.py  column_generator.py  ifc_generator.py  slab_generator.py
d23d/parsers/: __init__.py  dxf_parser.py  polyline_extractor.py
d23d/spatial/: __init__.py  spatial_index.py
